# torchcode-web

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  entrypoint.sh  package-lock.json  package.json  pyproject.toml  setup.py  setup.sh
.github/workflows/: contributors-readme.yml  hf-spaces-deploy.yml  pypi-publish.yml
docs/superpowers/plans/: 2026-04-01-torchcode-frontend-redesign.md
docs/superpowers/specs/: 2026-04-01-torchcode-frontend-redesign.md
grading_service/: main.py
jupyter_config/: overrides.json
labextension/src/: index.ts
labextension/style/: base.css
scripts/: add_colab_badges.py  add_colab_torch_judge_install.py  extract_starters.py  seed_problems.py
solutions/: 07_batchnorm_solution.ipynb  38_grpo_loss_solution.ipynb  39_ppo_loss_solution.ipynb  40_linear_regression_solution.ipynb
templates/: 00_welcome.ipynb  07_batchnorm.ipynb  37_dpo_loss.ipynb  38_grpo_loss.ipynb  39_ppo_loss.ipynb  40_linear_regression.ipynb
torch_judge/: __init__.py
torch_judge/tasks/: adam.py  attention.py  batchnorm.py  beam_search.py  bpe.py  causal_attention.py  conv2d.py  cosine_lr.py  cross_attention.py  cross_entropy.py  dpo_loss.py  dropout.py  embedding.py  flash_attention.py  gelu.py  gpt2_block.py  gqa.py  gradient_accumulation.py  gradient_clipping.py  grpo_loss.py  int8_quantization.py  kv_cache.py  layernorm.py  linear.py  linear_attention.py  linear_regression.py  lora.py  mha.py  mlp.py  moe.py  ppo_loss.py  relu.py  rmsnorm.py  rope.py  sliding_window.py  softmax.py  speculative_decoding.py  topk_sampling.py  vit_patch.py  weight_init.py
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/problems/: page.tsx
web/src/components/: CodeEditor.tsx  HintPanel.tsx  Navigation.tsx  ProblemDetailNav.tsx  ProblemList.tsx  ProblemListItem.tsx  SubmissionResults.tsx
web/src/components/home/: HomeContent.tsx
web/src/components/layout/: ProblemDrawer.tsx  TopNav.tsx
web/src/components/problem/: DifficultyBadge.tsx  ProblemFilters.tsx  ProblemRow.tsx  StatusIcon.tsx
web/src/context/: LocaleContext.tsx
web/src/lib/: constants.ts  db.ts  i18n.ts  monacoTheme.ts  parseNotebook.ts  problems.json  pythonHighlight.tsx  starters.json  types.ts
web/src/store/: problemStore.ts
(+19 files in other folders)
